--- a/menjar/calents.html
+++ b/menjar/calents.html
@@ -6,6 +6,23 @@
     <title>Food Truck - Plats Calents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        /* Asegurar que el footer esté siempre al final de la página */
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Altura mínima de la página */
+        }
+        .content {
+            flex: 1; /* Hace que el contenido ocupe el espacio restante */
+        }
+        footer {
+            background-color: #343a40; /* Color oscuro para el footer */
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
@@ -32,15 +49,23 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- Contingut de la pàgina -->
-    <div class="container mt-4">
+    <div class="container mt-4 content">
         <h2>Pàgina de Plats Calents</h2>
         <p>Aquí trobaràs una selecció dels nostres millors plats calents.</p>
     </div>
 
-    <footer class="bg-dark text-white text-center p-3 mt-4">
-        <p>Segueix-nos a les xarxes socials!</p>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>Segueix-nos a les xarxes socials!</p>
+            <div class="social-icons">
+                <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i> Facebook</a>
+                <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i> Instagram</a>
+                <a href="#" class="text-white"><i class="bi bi-twitter"></i> Twitter</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
