--- a/menjar/calents.html
+++ b/menjar/calents.html
@@ -6,23 +6,7 @@
     <title>Food Truck - Plats Calents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        /* Asegurar que el footer esté siempre al final de la página */
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh; /* Altura mínima de la página */
-        }
-        .content {
-            flex: 1; /* Hace que el contenido ocupe el espacio restante */
-        }
-        footer {
-            background-color: #343a40; /* Color oscuro para el footer */
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/calents.css">
 </head>
 <body>
     <!-- Header -->
