--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li><a class="dropdown-item" href="#">Dolços</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="quisom.html">Qui Som</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./quisom/quisom.html">Qui Som</a></li>
                 </ul>
                 <h1 class="navbar-title">SushiTrack</h1>
                 <span id="welcomeMessage" class="welcome-message"></span>
