--- a/quisom/quisom.html
+++ b/quisom/quisom.html
@@ -33,8 +33,15 @@
 
     <!-- content -->
     <div class="container">
-        
+        <div class="primer-div">
+            <h2 class="quisom_title">SushiTrack</h2>
+            <p class="description">SushiTrack és un restaurant on pots trobar una varietat de plats de sushi per satisfer les teves necessitats. Disposem de diverses opcions de sushi de diferents mides i amb diferents sabors. També pots gaudir del sushi amb vista panoràmica i amb salsa.</p>
+        </div>
     </div>
 </body>
 </html>
+
+
+
+
 
