--- a/index.html
+++ b/index.html
@@ -4,42 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Truck</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="./css/styles.css" rel="stylesheet">
+    <title>Food Truck</title>
 </head>
 
 <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+            <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" alt="Logo" height="40"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                    <!-- Menú principal con submenús -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="menjarDropdown" role="button"
-                            data-bs-toggle="dropdown">Menjar</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="menjar/calent1.html">Ramen amb sushi</a></li>
-                                <li><a class="dropdown-item" href="menjar/calent2.html">Takoyaki</a></li>
-                                <li><a class="dropdown-item" href="menjar/calent3.html">Tempura de Gambes</a></li>
-                                <li><a class="dropdown-item" href="menjar/calent4.html">Gyoza</a></li>
-                                <li><a class="dropdown-item" href="menjar/fred1.html">Sashimi de Salmó</a></li>
-                                <li><a class="dropdown-item" href="menjar/fred2.html">Maki Sushi de Tonyina</a></li>
-                                <li><a class="dropdown-item" href="menjar/fred3.html">Nigiri de Lluç Negre</a></li>
-                                <li><a class="dropdown-item" href="menjar/fred4.html">Poke Bowl</a></li>
-                                <li><a class="dropdown-item" href="menjar/dolc1.html">Dorayaki</a></li>
-                                <li><a class="dropdown-item" href="menjar/dolc2.html">Mochi de Te Verd</a></li>
-                                <li><a class="dropdown-item" href="menjar/dolc3.html">Taiyaki</a></li>
-                                <li><a class="dropdown-item" href="menjar/dolc4.html">Gelat de Sèsam Negre</a></li>
-                            </ul>
+                        <a class="nav-link dropdown-toggle" href="#" id="menuDropdown" role="button" data-bs-toggle="dropdown">Menjar</a>
+                        <ul class="dropdown-menu">
+                            <!-- Plats Calents -->
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Plats Calents</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="menjar/calent1.html">Ramen amb sushi</a></li>
+                                    <li><a class="dropdown-item" href="menjar/calent2.html">Takoyaki</a></li>
+                                    <li><a class="dropdown-item" href="menjar/calent3.html">Tempura de Gambes</a></li>
+                                    <li><a class="dropdown-item" href="menjar/calent4.html">Gyoza</a></li>
+                                </ul>
+                            </li>
+
+                            <!-- Plats Freds -->
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Plats Freds</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="menjar/fred1.html">Sashimi de Salmó</a></li>
+                                    <li><a class="dropdown-item" href="menjar/fred2.html">Maki Sushi de Tonyina</a></li>
+                                    <li><a class="dropdown-item" href="menjar/fred3.html">Nigiri de Lluç Negre</a></li>
+                                    <li><a class="dropdown-item" href="menjar/fred4.html">Poke Bowl</a></li>
+                                </ul>
+                            </li>
+
+                            <!-- Postres -->
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Postres</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="menjar/dolc1.html">Dorayaki</a></li>
+                                    <li><a class="dropdown-item" href="menjar/dolc2.html">Mochi de Te Verd</a></li>
+                                    <li><a class="dropdown-item" href="menjar/dolc3.html">Taiyaki</a></li>
+                                    <li><a class="dropdown-item" href="menjar/dolc4.html">Gelat de Sèsam Negre</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="./quisom/quisom.html">Qui Som</a></li>
+
+                    <!-- Begudes -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./begudes/begudes.html">Begudes</a>
+                    </li>
+
+                    <!-- Qui Som -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./quisom/quisom.html">Qui Som</a>
+                    </li>
                 </ul>
                 <h1 class="navbar-title">SushiTrack</h1>
                 <span id="welcomeMessage" class="welcome-message"></span>
@@ -86,8 +115,7 @@
     <!-- Breadcrumbs -->
     <nav aria-label="breadcrumb" class="container mt-3">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Inici</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Menú</li>
+            <li class="breadcrumb-item"><a href="./index.html">Inici</a></li>
         </ol>
     </nav>
 
