estropicio roberto arreglado

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                                 </ul>
                             </li>
 
-                            <!-- Postres -->
+                            <!-- Plats Dolços -->
                             <li class="dropdown-submenu">
-                                <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Postres</a>
+                                <a class="dropdown-item dropdown-toggle" href="#" data-bs-toggle="dropdown">Plats Dolços</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="menjar/dolc1.html">Dorayaki</a></li>
                                     <li><a class="dropdown-item" href="menjar/dolc2.html">Mochi de Te Verd</a></li>
