cagadas historicas del hugo que casi se carga la pagina

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/default.png" class="d-block w-100" alt="...">
+                    <img src="./img/Gyoza.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/default.png" class="d-block w-100" alt="...">
+                    <img src="./img/Sashimi.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="./img/default.png" class="d-block w-100" alt="...">
@@ -162,37 +162,37 @@
         <div class="row g-4">
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="card h-100">
-                    <img src="./img/default.png" class="card-img-top" alt="...">
+                    <img src="./img/taiyaki.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h5 class="card-title mb-0">Entrepà Especial</h5>
+                            <h5 class="card-title mb-0">Taiyaki</h5>
                             <div>
                                 <i class="fas fa-thumbs-up text-success me-2" style="cursor: pointer;"></i>
                                 <i class="fas fa-thumbs-down text-danger" style="cursor: pointer;"></i>
                             </div>
                         </div>
-                        <p class="card-text">Deliciós entrepà de pernil ibèric.</p>
+                        <p class="card-text">Peixet de massa farcit de crema</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="card h-100">
-                    <img src="./img/default.png" class="card-img-top" alt="...">
+                    <img src="./img/mochi.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center mb-2">
-                            <h5 class="card-title mb-0">Hamburguesa Premium</h5>
+                            <h5 class="card-title mb-0">Mochi de té</h5>
                             <div>
                                 <i class="fas fa-thumbs-up text-success me-2" style="cursor: pointer;"></i>
                                 <i class="fas fa-thumbs-down text-danger" style="cursor: pointer;"></i>
                             </div>
                         </div>
-                        <p class="card-text">Hamburguesa 100% vedella.</p>
+                        <p class="card-text">Plats Dolços tradicionals d’arròs.</p>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-3">
                 <div class="card h-100">
-                    <img src="./img/default.png" class="card-img-top" alt="...">
+                    <img src="./img/nigiri.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center mb-2">
                             <h5 class="card-title mb-0">Nigiri</h5>
@@ -220,24 +220,83 @@
                     </div>
                 </div>
             </div>
+            <!-- Platos adicionales -->
+            <div class="col-12 col-sm-6 col-md-3">
+                <div class="card h-100">
+                    <img src="./img/Sashimi.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h5 class="card-title mb-0">Sashimi de Salmó</h5>
+                            <div>
+                                <i class="fas fa-thumbs-up text-success me-2" style="cursor: pointer;"></i>
+                                <i class="fas fa-thumbs-down text-danger" style="cursor: pointer;"></i>
+                            </div>
+                        </div>
+                        <p class="card-text">Làmines fines de salmó cru.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <div class="card h-100">
+                    <img src="./img/maki.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h5 class="card-title mb-0">Maki Sushi de Tonyina</h5>
+                            <div>
+                                <i class="fas fa-thumbs-up text-success me-2" style="cursor: pointer;"></i>
+                                <i class="fas fa-thumbs-down text-danger" style="cursor: pointer;"></i>
+                            </div>
+                        </div>
+                        <p class="card-text">Rotllets d’arròs amb alga i tonyina fresca.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <div class="card h-100">
+                    <img src="./img/Gyoza.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h5 class="card-title mb-0">Gyoza</h5>
+                            <div>
+                                <i class="fas fa-thumbs-up text-success me-2" style="cursor: pointer;"></i>
+                                <i class="fas fa-thumbs-down text-danger" style="cursor: pointer;"></i>
+                            </div>
+                        </div>
+                        <p class="card-text">Empanadilles japoneses farcides.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <div class="card h-100">
+                    <img src="./img/tempura.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h5 class="card-title mb-0">Tempura de Gambes</h5>
+                            <div>
+                                <i class="fas fa-thumbs-up text-success me-2" style="cursor: pointer;"></i>
+                                <i class="fas fa-thumbs-down text-danger" style="cursor: pointer;"></i>
+                            </div>
+                        </div>
+                        <p class="card-text">Gambes arrebossades i fregides.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Paginación -->
         <nav aria-label="Navegación de páginas" class="mt-4">
             <ul class="pagination justify-content-center">
-                <li class="page-item disabled">
+                <li class="page-item disabled" id="prevPage">
                     <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Anterior</a>
                 </li>
-                <li class="page-item active"><a class="page-link" href="#page1">1</a></li>
-                <li class="page-item"><a class="page-link" href="#page2">2</a></li>
-                <li class="page-item"><a class="page-link" href="#page3">3</a></li>
-                <li class="page-item">
+                <li class="page-item active" id="page1"><a class="page-link" href="#page1">1</a></li>
+                <li class="page-item" id="page2"><a class="page-link" href="#page2">2</a></li>
+                <li class="page-item" id="nextPage">
                     <a class="page-link" href="#page2">Següent</a>
                 </li>
             </ul>
         </nav>
     </div>
-
     <!-- Footer -->
     <footer class="bg-dark text-white p-4 mt-4">
         <div class="container">
@@ -340,7 +399,44 @@
                 document.getElementById('cookieAlert').style.display = 'none';
             }
         })
+        const cardsPerPage = 4;  // Cuatro platos por página
+        const totalPages = Math.ceil(8 / cardsPerPage);  // Ajusta el número total de páginas
 
+        let currentPage = 1;
+
+        // Función para mostrar solo los elementos de la página actual
+        function paginate() {
+            const allCards = document.querySelectorAll('.card');
+            const start = (currentPage - 1) * cardsPerPage;
+            const end = start + cardsPerPage;
+
+            allCards.forEach((card, index) => {
+                card.style.display = (index >= start && index < end) ? 'block' : 'none';
+            });
+
+            // Actualizar las páginas activas
+            document.querySelectorAll('.page-item').forEach(item => item.classList.remove('active'));
+            document.getElementById(`page${currentPage}`).classList.add('active');
+
+            // Deshabilitar la paginación si estamos en la primera o última página
+            document.getElementById('prevPage').classList.toggle('disabled', currentPage === 1);
+            document.getElementById('nextPage').classList.toggle('disabled', currentPage === totalPages);
+        }
+
+        // Función para cambiar la página
+        function changePage(page) {
+            if (page > 0 && page <= totalPages) {
+                currentPage = page;
+                paginate();
+            }
+        }
+
+        // Eventos de navegación
+        document.getElementById('prevPage').addEventListener('click', () => changePage(currentPage - 1));
+        document.getElementById('nextPage').addEventListener('click', () => changePage(currentPage + 1));
+
+        // Inicializa la paginación
+        paginate();
     </script>
 </body>
 
