--- a/menjar/calent1.html
+++ b/menjar/calent1.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="../img/ramen.jpg" class="card-img-top" alt="Ramen amb sushi">
+                    <img src="../img/ramen.jpg" class="card-img-top-plato" alt="Ramen amb sushi">
                     <div class="card-body text-center">
                         <h2 class="card-title">Ramen amb sushi</h2>
                         <p class="card-text">Sopa japonesa amb sushi com a acompanyament.</p>
