--- a/menjar/calent2.html
+++ b/menjar/calent2.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-4">
-                    <img src="../img/takoyaki.jpg" class="card-img-top" alt="Takoyaki">
+                    <img src="../img/takoyaki.jpg" class="card-img-top-plato" alt="Takoyaki">
                     <div class="card-body text-center">
                         <h2 class="card-title">Takoyaki</h2>
                         <p class="card-text">Boletes de massa farcides de pop, molt populars al Japó.</p>
