--- a/menjar/calent3.html
+++ b/menjar/calent3.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-4">
-                    <img src="../img/tempura.jpg" class="card-img-top" alt="Tempura de Gambes">
+                    <img src="../img/tempura.jpg" class="card-img-top-plato" alt="Tempura de Gambes">
                     <div class="card-body text-center">
                         <h2 class="card-title">Tempura de Gambes</h2>
                         <p class="card-text">Gambes arrebossades i fregides, cruixents i delicioses.</p>
