--- a/menjar/dolc1.html
+++ b/menjar/dolc1.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/dorayaki.jpg" class="card-img-top" alt="Dorayaki">
+                    <img src="../img/dorayaki.jpg" class="card-img-top-plato" alt="Dorayaki">
                     <div class="card-body text-center">
                         <h2 class="card-title">Dorayaki</h2>
                         <p class="card-text">Pancakes japonesos farcits de pasta de mongeta dolça.</p>
