--- a/menjar/dolc2.html
+++ b/menjar/dolc2.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/mochi.jpg" class="card-img-top" alt="Mochi de Te Verd">
+                    <img src="../img/mochi.jpg" class="card-img-top-plato" alt="Mochi de Te Verd">
                     <div class="card-body text-center">
                         <h2 class="card-title">Mochi de Te Verd</h2>
                         <p class="card-text">Plats Dolços tradicionals d’arròs glutinós amb matcha.</p>
