--- a/menjar/dolc3.html
+++ b/menjar/dolc3.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/taiyaki.jpg" class="card-img-top" alt="Taiyaki">
+                    <img src="../img/taiyaki.jpg" class="card-img-top-plato" alt="Taiyaki">
                     <div class="card-body text-center">
                         <h2 class="card-title">Taiyaki</h2>
                         <p class="card-text">Peixet de massa farcit de crema de mongeta dolça.</p>
