--- a/menjar/dolc4.html
+++ b/menjar/dolc4.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/gelat.jpg" class="card-img-top" alt="Gelat de Sèsam Negre">
+                    <img src="../img/gelat.jpg" class="card-img-top-plato" alt="Gelat de Sèsam Negre">
                     <div class="card-body text-center">
                         <h2 class="card-title">Gelat de Sèsam Negre</h2>
                         <p class="card-text">Gelat japonès amb un sabor únic de sèsam negre.</p>
