--- a/menjar/fred1.html
+++ b/menjar/fred1.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/sashimi.jpg" class="card-img-top" alt="Sashimi de Salmó">
+                    <img src="../img/sashimi.jpg" class="card-img-top-plato" alt="Sashimi de Salmó">
                     <div class="card-body text-center">
                         <h2 class="card-title">Sashimi de Salmó</h2>
                         <p class="card-text">Làmines fines de salmó cru, servides amb soja i wasabi.</p>
