--- a/menjar/fred2.html
+++ b/menjar/fred2.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/maki.jpg" class="card-img-top" alt="Maki Sushi de Tonyina">
+                    <img src="../img/maki.jpg" class="card-img-top-plato" alt="Maki Sushi de Tonyina">
                     <div class="card-body text-center">
                         <h2 class="card-title">Maki Sushi de Tonyina</h2>
                         <p class="card-text">Rotllets d’arròs amb alga i tonyina fresca.</p>
