--- a/menjar/fred3.html
+++ b/menjar/fred3.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/nigiri.jpg" class="card-img-top" alt="Nigiri de Lluç Negre">
+                    <img src="../img/nigiri.jpg" class="card-img-top-plato" alt="Nigiri de Lluç Negre">
                     <div class="card-body text-center">
                         <h2 class="card-title">Nigiri de Lluç Negre</h2>
                         <p class="card-text">Arròs amb una làmina de lluç negre a sobre.</p>
