--- a/menjar/fred4.html
+++ b/menjar/fred4.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/poke.jpg" class="card-img-top" alt="Poke Bowl">
+                    <img src="../img/poke.jpg" class="card-img-top-plato" alt="Poke Bowl">
                     <div class="card-body text-center">
                         <h2 class="card-title">Poke Bowl</h2>
                         <p class="card-text">Bol d’arròs amb peix cru, alvocat i altres toppings.</p>
