--- a/menjar/calent4.html
+++ b/menjar/calent4.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card mb-3">
-                    <img src="../img/gyoza.jpg" class="card-img-top" alt="Gyoza">
+                    <img src="../img/gyoza.jpg" class="card-img-top-plato-plato-plato" alt="Gyoza">
                     <div class="card-body text-center">
                         <h2 class="card-title">Gyoza</h2>
                         <p class="card-text">Empanadilles japoneses farcides de carn i verdures.</p>
